# virtualbookplayer

./: .gitmodules  ANDROID_BUILD.md  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  check.sh  index.html  sample 52 Limonaire.yml
.github/workflows/: rust-check.yml  rust-eval-macos.yml  rust.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/barrelorgandiscovery/virtualbookplayer/: MainActivity.java
app/src/main/res/values/: themes.xml
assets/: icon.xcf  new_logo.xcf  sw.js
depends/egui_extras_xt/egui_extras_xt/: Cargo.toml
depends/egui_extras_xt/egui_extras_xt_example/: Cargo.toml
depends/player/: Cargo.toml  README.md  autumn_no3_allegro_gp.mid
depends/player/src/: lib.rs  main.rs
depends/player/src/midiio/: midiconverter.rs  midifactory.rs  mod.rs
depends/player/tests/: test_midi_note_dump.rs  test_player.rs  test_player_information_construction.rs
src/: app.rs  appplayer.rs  file_store.rs  lib.rs  main.rs  playlist.rs  playmetadata_manager.rs  screen_visu.rs  virtualbookcomponent.rs
src/app/: frame_history.rs  i18n.rs  mod.rs  screen_playlist.rs  screen_visu.rs
src/playmetadata/: mod.rs
