[package]
name = "virtualbookplayer"
version = "0.0.54"
authors = ["frett27@gmail.com"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "virtualbookplayerapp"
path = "src/main.rs"

[dependencies]

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

chrono = "0.4.26"

bookparsing = { path = "depends/book-lib-rs" }

env_logger = "0.11.3"
log = "0.4.8"
sys-locale = "0.3.1"

player= { path = "depends/player" }
midir = { version = "0.9.1" }

tracing-subscriber = "0.3"
im-native-dialog = "0.3.0"

# all plateforms support jack
nodi= { version = "0.19.2" , features=["midir-jack"]}
clap = { version = "4.3.10", features = ["derive"] }

egui = { version="0.27.2"}

egui_extras = { version="0.27.2" , features = ["image"]}

image = { version = "0.24.7", default-features = false, features = ["png"] }

pid-lite = { git = "https://github.com/yoshuawuyts/pid-lite", tag="v1.1.2" }

egui-phosphor = "0.4.0"
egui_dnd = "0.8.0"

egui_extras_xt = { path = 'depends/egui_extras_xt/egui_extras_xt',features=["ui","displays"] }

# egui_extras_xt = { git="https://github.com/xTibor/egui_extras_xt", branch="master", features=["ui","displays"]}

winit = {version="0.29.15", features=["wayland"]}

eframe = { version="0.27.2" , default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
] }


profiling = {version = "1.0.11", features=["profile-with-tracy"], optional=true }
tracy-client = { version = "0.16.3", optional = true }

[features]
default = []
profiling = ["dep:tracy-client", "dep:profiling"]


[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
egui-phosphor = { path = 'depends/egui-phosphor' }
