[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nodi= { version = "0.19.2" , features=["midir-jack"]}
midir = { version = "0.9.1" }

env_logger = "0.10.0"
log = "0.4.8"

thread-priority = "0.13.1"

bookparsing = {path = "../book-lib-rs"}

profiling = {version = "1.0.11"}

# for input / output conversions, configurations

serde = {version = "1.0.160", features = ["derive"]}
serde_yaml = "0.9.25"

[patch.crates-io]
midly = { git = "https://github.com/negamartin/midly" }
